# HandhaldenSpelkonsoll

./: .gitignore  CMakeLists.txt  Kconfig  README.md  sdkconfig
components/lvgl/: CMakeLists.txt
components/lvgl__lvgl/: idf_component.yml
components/lvgl_esp32_drivers/: .component_hash  CMakeLists.txt  Kconfig  component.mk  lvgl_helpers.c  lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: Kconfig  disp_driver.c  disp_driver.h  ili9488.c
hardware/: HowToCompileWithArduino.md  comms.c  comms.h  comms.ino  esp-now.ino  example.ino  hardware-oversikt.txt  master.c  master.ino  oversikt.md  slave.c  slave.ino  tamagucci-shell.scad  test_delay.ino  test_topology.ino
hardware/design/: HandhaldenSpelkonsoll_1-1-3.stl  knapper.blend  spillkonsoll_case.blend  spillkonsoll_case.blend1  spillkonsoll_case.stl  spillkonsoll_case_0.6n_0.35mm_PETG_MK3S_2h31m.gcode  spillkonsoll_case_buttons.stl  spillkonsoll_case_old.blend  spillkonsoll_case_v2.stl  (+2 more)
include/: constants.h  ili9488.h  lvgl_helpers.h
main/: .gitignore  CMakeLists.txt  Kconfig  Kconfig.projbuild  app_main.c  board.c  board.h  button.c  button.h  comms.c  comms.h  constants.h  disp_spi.c  disp_spi.h  esp_lcd_backlight.c  espnow.c  espnow.h  idf_component.yml  ili9488.h  lvgl_helpers.c  multiplayer.c  multiplayer.h  multiplayer_functions.c  old_main.c  snake.c  snake.h  types.h
spill/: board.c  board.h  board_header.h  boilerplate.cpp  boilerplate.ino  constants.h  game.c  game.ino  keypress.c  keypress_windows.c  main.c  multiplayer_functions.c  snake.c  snake.h  snake.ino
(+43 files in other folders)
